fix z-index on images

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -52,7 +52,7 @@
 
 .photo {
   border-radius: 50%;
-  z-index: 50;
+  z-index: 20;
 }
 
 .photoContainer .image {
